saves/test/demo_full_20240802_193545/bugs_addsubz/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp bugs_addsubz_tb.v bugs_addsubz.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
bugs_addsubz_tb.v:82: $finish called at 10000 (1ps)

iverilog cmd 2 error:

